fix: anchor contrast on :active refactor: %anchor to include a:not(.button) for better separation

--- a/src/css/abstracts/_collections.scss
+++ b/src/css/abstracts/_collections.scss
@@ -3,7 +3,7 @@
 /// @group abstracts
 ////
 
-a,
+a:not(.button),
 .anchor {
 	@extend %anchor !optional;
 }
